--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_HOST=
-DB_PORT=
+DB_USER=my_user
+DB_PASSWORD=12345666
+DB_NAME=metter_type_project
+DB_HOST=localhost
+DB_PORT=5432
